--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.signalml</groupId>
 	<artifactId>eega-tag-library</artifactId>
-	<name>EEGA tag library</name>
 	<version>1.0.0</version>
+	<name>EEGA tag library</name>
 	<description>Old code imported from EEGA</description>
+	<organization>
+		<name>Department of Biomedical Physics, Warsaw University and The Svarog Team</name>
+		<url>http://brain.fuw.edu.pl/</url>
+	</organization>
+	<url>http://signalml.org/svarog/</url>
+	<inceptionYear>2007</inceptionYear>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -37,15 +43,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.5</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 	
 	<scm>
 		<connection>scm:git:http://escher.fuw.edu.pl/git/repos/eega-tag-library</connection>
