Tell pmd plugin which version of Java we are using
Apparently pmd is too stupid to share jdk version info with compiler,
or the other way around.

--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
 	</organization>
 	<url>http://signalml.org/svarog/</url>
 	<inceptionYear>2007</inceptionYear>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <jdk_version>1.6</jdk_version>
 	</properties>
 
 	<build>
@@ -23,8 +24,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${jdk_version}</source>
+					<target>${jdk_version}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -43,13 +44,26 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
+        <reporting>
+                <plugins>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-pmd-plugin</artifactId>
+                                <version>2.5</version>
+                                <configuration>
+                                        <targetJdk>${jdk_version}</targetJdk>
+                                </configuration>
+                        </plugin>
+                </plugins>
+        </reporting>
+
 	<scm>
 		<connection>scm:git:http://escher.fuw.edu.pl/git/repos/eega-tag-library</connection>
 		<developerConnection>scm:git:ssh://escher.fuw.edu.pl/git/repos/eega-tag-library</developerConnection>
 		<url>http://escher.fuw.edu.pl/git/repos/eega-tag-library</url>
 	</scm>
-		
+
 	<licenses>
 		<license>
 			<name>General Public License, Version 3</name>
