Add findbugs plugin

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@
                                         <targetJdk>${jdk_version}</targetJdk>
                                 </configuration>
                         </plugin>
+                        <plugin>
+                                <groupId>org.codehaus.mojo</groupId>
+                                <artifactId>findbugs-maven-plugin</artifactId>
+                                <version>1.2</version>
+                                <configuration>
+                                        <findbugsXmlOutput>true</findbugsXmlOutput>
+                                        <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+                                        <xmlOutput>true</xmlOutput>
+                                </configuration>
+                        </plugin>
                 </plugins>
         </reporting>
 
