--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
 Source: eega-tag-library
 Section: java
 Priority: extra
-Maintainer: Zbigniew Jędrzejewski-Szmek <zbyszek@in.waw.pl>
+Maintainer: Karol Auguštin <karol@augustin.pl>
 Build-Depends: debhelper (>= 8.0.0),
                maven-debian-helper,
                libmaven-antrun-plugin-java,
                maven2
 Standards-Version: 3.9.2
-Vcs-Git: git://escher.fuw.edu.pl/git/eega-tag-library
-Vcs-Browser: http://escher.fuw.edu.pl/git/eega-tag-library
+Vcs-Git: git://git.braintech.pl/eega-tag-library.git
+Vcs-Browser: http://git.braintech.pl/eega-tag-library.git
 
 Package: libeega-tag-library-java
 Architecture: all
